--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="subheading mb-5">University of Strathclyde · Glasgow · +447850557560 ·
             <a href="mailto:name@email.com">finlay.muir.2021@uni.strath.ac.uk</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">I am a 3rd Year Electronic and Electrical Engineering Student Attending the University of Strathclyde. Specializing in innovative solutions in renewables and advanced technology, my work spans from FPGA-based systems to Python-driven mini-grid designs as well as strong experience in industry standard software such as MATLAB, Altium, and Autodesk Inventor. Explore my projects that blend academic knowledge with practical applications, reflecting a commitment to engineering excellence and sustainable progress.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
