--- a/index.html
+++ b/index.html
@@ -99,45 +99,34 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Software Engineer</h3>
+              <div class="subheading mb-3">Vertically Integrated Projects (VIP)</div>
+              <p>Throughout the past two years I have played a pivotal role in a team associated with the Vertically Integrated Projects (VIP) scheme, an innovative program that drives sustainable development by empowering undergraduate engineering students to create impactful projects. Our team’s initiative was to develop a Python-based interactive web application designed to assist mini grid developers in finding the best possible design implementation for their personalised mini grid requirements. The core functionality revolves around optimising energy distribution. Upon user input, which requires the user to provide geographical coordinate values of prospective energy consumers and several personalised parameters, the system deploys the k-means clustering algorithm to group customers together, followed by a minimum spanning tree algorithm to create the network. The user benefits from the ability to save their tailored implementation and receives a comprehensive cost analysis, detailing expenses like cable costs and pole installations. Through this I was able to gain invaluable experience in software development in the context of engineering and sustainability and delve into personal interests such as machine learning and unsupervised learning algorithms. My involvement allowed me to secure an internship and funding to continue research and development of the tool where I enhanced the systems features and functionality. This involved meeting with mini grid developers to gain insight into what materials are necessary to a bill of quantities, allowing me to write a cost estimate algorithm that details the expenses of a specific implementation. This development led to my elevation as the technical lead of the project.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">September 2021 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Electronic and Electrical Engineer</h3>
+              <div class="subheading mb-3">Keysight Technologies</div>
+              <p>At the end of 2020, I had the privilege of undertaking work experience at Keysight Technologies in Edinburgh, a global leader in electronic measurement and testing. During my tenure there, I was given the task of assembling an FM radio. This project demanded proficiency in precise soldering of components onto a PCB, a skill I honed during this period. A key aspect of this task was accurately reading resistor values and diligently following the intricate pathways of the PCB schematic to ensure correct component placement and connections. My experience extended beyond just assembly. Throughout my time at Keysight I revolved different stations to gain diverse insights from industry experts in both hardware and software domains. This involved a project that delved into finite state machines, specifically the Mealy and Moore models. Applying theoretical knowledge, I simulated traffic light systems, allowing me to understand the practical applications and nuances of these models in real-world applications. Additionally, I was given the opportunity to handle cutting edge instrumentation that Keysight is renowned for. I acquired hands-on experience with oscilloscopes, logic analysers, and industry standard software, understanding their functionalities and applications in electronic testing. This work placement not only solidified my foundational knowledge but also exposed me to the forefront of electronic and electrical engineering, making me appreciate the symbiosis of theoretical concepts and their real-world applications.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">December 2020 - February 2021</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Electronic and Electrical Engineering</h3>
+              <div class="subheading mb-3">Star Refrigeration</div>
+              <p>During my tenure at Star Refrigeration, I was instrumental in the development and implementation of a cutting-edge Door Management System for industrial refrigerators, utilizing the ESP8266 microcontroller and advanced light sensor technology. This project was aimed at enhancing energy efficiency and reducing operational costs by optimizing the cooling process. I was responsible for designing and programming the ESP8266 to monitor and control access to the refrigeration units, ensuring airtight sealing and minimal temperature fluctuations. My innovative approach involved the integration of light sensors to detect door openings and relay real-time data, enabling proactive maintenance and swift response to potential issues. This system not only led to significant energy savings but also extended the lifespan of perishable goods stored within the refrigerators, showcasing my ability to deliver practical and sustainable engineering solutions in a commercial setting.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">January 2024 - Present</span>
             </div>
           </div>
 
@@ -151,24 +140,23 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">University of Strathclyde</h3>
+              <div class="subheading mb-3">Masters of Engineering</div>
+              <div>Electronic and Electrical Engineering</div>
+              <p>2nd Year Average: 73.45%</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">September 2021 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Stirling High School</h3>
+              <p>Highers: AAAAA</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">September 2015 - May 2021</span>
             </div>
           </div>
 
@@ -191,29 +179,21 @@
               <i class="devicons devicons-javascript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
+              <i class="devicons devicons-azure-plain"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
+              <i class="devicon-arduino-plain"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
+              <i class="devicon-c-plain"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
+            <i class="devicon-django-plain-wordmark colored"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
+              <i class="devicon-git-plain-wordmark"></i>
             </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
+            
           </ul>
 
           <div class="subheading mb-3">Workflow</div>
