--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
               <i class="devicons devicons-javascript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-azure-plain"></i>
+              <i class="devicons devicons-azure"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicon-arduino-plain"></i>
+              <i class="devicon-arduino"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicon-c-plain"></i>
+              <i class="devicon-c"></i>
             </li>
             <li class="list-inline-item">
-            <i class="devicon-django-plain-wordmark colored"></i>
+            <i class="devicon-django"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicon-git-plain-wordmark"></i>
+              <i class="devicon-git"></i>
             </li>
             
           </ul>
