--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
               <i class="devicons devicons-javascript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-azure"></i>
+              <i class="devicon-azure-plain colored"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicon-arduino"></i>
+              <i class="devicon-arduino-plain colored"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicon-c"></i>
+              <i class="devicon-c-plain colored"></i>
             </li>
             <li class="list-inline-item">
-            <i class="devicon-django"></i>
+            <i class="devicon-django-plain colored"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicon-git"></i>
+               <i class="devicon-flask-original colored"></i>
             </li>
             
           </ul>
