--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <i class="devicons devicons-javascript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-azure-plain colored"></i>
+              <i class="devicons devicons-python"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-arduino-plain colored"></i>
