--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicons/css/devicons.min.css">
+
   </head>
 
   <body id="page-top">
