--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicons/css/devicons.min.css">
-
   </head>
 
   <body id="page-top">
@@ -180,19 +178,28 @@
               <i class="devicons devicons-javascript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-python"></i>
+              <i class="devicons devicons-jquery"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-arduino-plain colored"></i>
+              <i class="devicons devicons-sass"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-c-plain colored"></i>
+              <i class="devicons devicons-less"></i>
             </li>
             <li class="list-inline-item">
-            <i class="devicons devicons-django-plain colored"></i>
+              <i class="devicons devicons-bootstrap"></i>
             </li>
             <li class="list-inline-item">
-               <i class="devicons devicons-flask-original colored"></i>
+              <i class="devicons devicons-wordpress"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-grunt"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-gulp"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-npm"></i>
             </li>
             
           </ul>
