--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <i class="devicons devicons-npm"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-python"></i>
+              <i class="devicons devicons-git"></i>
             </li>
             
           </ul>
