--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
             <li class="list-inline-item">
               <i class="devicons devicons-git"></i>
             </li>
+            <li class="list-inline-item">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg" />
+            </li>
             
           </ul>
 
