--- a/index.html
+++ b/index.html
@@ -159,6 +159,17 @@
             </div>
           </div>
 
+          
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Forth Valley College Summer School</h3>
+              <p>Grade: A*</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">June 2019 - August 2019</span>
+            </div>
+          </div>
+
         </div>
       </section>
 
