--- a/index.html
+++ b/index.html
@@ -160,9 +160,11 @@
           </div>
 
           
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Forth Valley College Summer School</h3>
+              <h3 class="mb-0">Forth Valley College</h3>
+              <div class="subheading mb-3">Engineering Summer School</div>
+              <div>Mechanical Engineering</div>
               <p>Grade: A*</p>
             </div>
             <div class="resume-date text-md-right">
