--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Stirling High School</h3>
-              <p>Highers: AAAAA</p>
+              <div class="subheading mb-3">Physics, Maths, Chemistry, English, History</div>
+              <p>Grade: AAAAA</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2015 - May 2021</span>
@@ -160,7 +161,7 @@
           </div>
 
           
-          <div class="resume-item d-flex flex-column flex-md-row mb-5" style="margin-top: 20px;">
+          <div class="resume-item d-flex flex-column flex-md-row mb-5" style="margin-top: 50px;">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Forth Valley College</h3>
               <div class="subheading mb-3">Engineering Summer School</div>
