--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row mb-5"  style="margin-top: 20px;">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of Strathclyde</h3>
               <div class="subheading mb-3">Masters of Engineering</div>
@@ -149,7 +149,7 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-item d-flex flex-column flex-md-row" style="margin-top: 40px;">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Stirling High School</h3>
               <div class="subheading mb-3">Physics, Maths, Chemistry, English, History</div>
@@ -161,7 +161,7 @@
           </div>
 
           
-          <div class="resume-item d-flex flex-column flex-md-row mb-5" style="margin-top: 50px;">
+          <div class="resume-item d-flex flex-column flex-md-row mb-5" style="margin-top: 70px;">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Forth Valley College</h3>
               <div class="subheading mb-3">Engineering Summer School</div>
