--- a/index.html
+++ b/index.html
@@ -219,8 +219,27 @@
               <i class="devicons devicons-git"></i>
             </li>
             <li class="list-inline-item">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg" />
+              <i class="devicons devicons-python"></i>
             </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-flask"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-azure"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-c"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-github"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-jupyter"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-vscode"></i>
+            </li>
+            
             
           </ul>
 
