--- a/index.html
+++ b/index.html
@@ -239,7 +239,9 @@
             <li class="list-inline-item">
               <i class="devicons devicons-vscode"></i>
             </li>
-            
+            <li class="list-inline-item">
+              <i class="devicons devicons-matlab"></i>
+            </li>
             
           </ul>
 
