--- a/index.html
+++ b/index.html
@@ -236,20 +236,29 @@
             
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Additional Skills</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Google Maps API</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              MATLAB</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              Flask</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Django</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Arduino</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Autodesk Inventor</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Altium</li>
           </ul>
         </div>
       </section>
