--- a/index.html
+++ b/index.html
@@ -266,8 +266,9 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>As a dynamic Electrical and Electronic Engineering student, my interests extend beyond the classroom into diverse realms where I can apply and expand my engineering knowledge. I am deeply passionate about sustainable energy solutions, consistently exploring the latest advancements in renewable technologies and their practical applications. My fascination with microcontrollers, particularly in projects like the ESP8266-based Door Management System, demonstrates my keen interest in IoT and smart systems.</p>
+          <p class="mb-0">Outside of engineering, I maintain an active lifestyle, reflecting my commitment to physical and mental well-being. As a Scottish champion in the 800-meter track, I value discipline, resilience, and strategic planning, which parallel my approach to engineering challenges. My engagement in Brazilian Jiu-Jitsu and participation in athletics at a national level further emphasize my dedication to continuous learning and adaptability.</p>
+          <p class="mb-0">Additionally, my involvement with the University’s Motorsport Society, where I contribute to building an electric race car, mirrors my enthusiasm for sustainable automotive technologies. These diverse interests not only fuel my engineering aspirations but also shape my holistic approach to problem-solving, innovation, and teamwork.</p>
         </div>
       </section>
 
