--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
               <a href="https://github.com/finmuir">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-arrow-circle-o-down fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://github.com/finmuir">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-list fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
