--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/finmuir">
+              <a href="img/Finlay Muir - CV-12.pdf" download="Finlay Muir - CV.pdf">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-arrow-circle-o-down fa-stack-1x fa-inverse"></i>
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/finmuir">
+              <a href="img/Finlay Muir - Portfolio.pdf" download="Finlay Muir - Portfolio.pdf">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-list fa-stack-1x fa-inverse"></i>
